# thanatos-old

./: Cargo.toml  vkvia.html
assets/shaders/: shader.vert.glsl  shader.vert.spv
gltf/src/: lib.rs
hephaestus/: Cargo.toml
hephaestus/src/: buffer.rs  command.rs  descriptor.rs  image.rs  lib.rs  pipeline.rs  task.rs  vertex.rs
tecs/: Cargo.toml
tecs/src/: lib.rs  vecany.rs
thanatos/: Cargo.toml
thanatos/assets/shaders/: shader.wgsl
thanatos/src/: assets.rs  camera.rs  event.rs  graphics.rs  main.rs  window.rs  world.rs
thanatos_macros/: Cargo.toml
thanatos_macros/src/: lib.rs
