[package]
name = "hephaestus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.37.3", default-features = false, features = ["linked", "debug"] }
ash-window = "0.12.0"
bytemuck = "1.15.0"
log = "0.4.21"
raw-window-handle = "0.5"
