[package]
name = "thanatos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.15.0", features = ["derive"] }
glam = { version = "0.26.0", features = ["bytemuck"] }
tokio = { version = "1.36.0", features = ["full"] }
wgpu = "0.19.3"
winit = "0.29.15"
